#866 - Fixing style for error messages and overflow for select

--- a/omod/src/main/compass/sass/dispensing.scss
+++ b/omod/src/main/compass/sass/dispensing.scss
@@ -1,10 +1,14 @@
 fieldset.medication {
 	background: #F8F8F8;
-	padding: 5px 0px 12px 19px;
+	padding: 5px 0px 12px 7px;
 	margin: 0;
 
+	.field-error {
+		color: #ff6666;
+	}
+
 	.medication-name input {
-		width: 95%;
+		width: 96%;
 		display: inline-block;
 	}
 
@@ -16,11 +20,15 @@ fieldset.medication {
 		margin-bottom: 5px;
 	}
 
+	input, select {
+		margin-top: 0;
+	}
+
 	p.inline {
-		width: 200px;
+		vertical-align: top;
+		min-width: 150px;
 		margin-right: 15px;
 		display: inline-block;
-		float: left;
 
 		&:last-child {
 			margin-right: 0;
@@ -28,28 +36,36 @@ fieldset.medication {
 	}
 
 	.select-arrow {
+		overflow: hidden;
+
 		&:after {
-			height: 33px;
-			margin-top: 1px;
+			margin-top: 0;
 		}
 
 		select {
 			min-width: 0;
+			min-width: 90px;
+			padding-right: 19px;
+			padding-left: 5px;
 		}
 	}
 
 	.doseInput {
+		display: inline-block;
+		vertical-align: top;
+
 		input, select {
 			display: inline;
 			min-width: 0;
 		}
 
 		input {
-			width: 35%;
+			display: block;
+			width: 50px;
 		}
 
 		select {
-			width: 40%;
+			width: 90px;
 		}
 	}
 }
@@ -57,4 +73,14 @@ fieldset.medication {
 .prescriber {
 	margin-top: 20px;
 	margin-bottom: 10px;
+
+	.select-arrow {
+		overflow: hidden;
+	}
+
+	select {
+		min-width: 200px;
+		padding-right: 19px;
+		padding-left: 5px;
+	}
 }
